spec/e2e/constructor/default_arguments.lit
type Foo {}

let foo = Foo(1, 2, 3); # error: [line 3] Runtime error: Expected 0 arguments but got 3.
